--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
@@ -9,11 +9,12 @@
     <title>Gaming store</title>
 </head>
 <body>
+    <img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfsY9VZlGQnMqHQkT0CawIUY0hCoxJqlUwng&usqp=CAU" alt="">        
 
      <!--Banner--> 
-     <div class="banner">        
+     <div class="banner">
         <div class="banner__navbar"> 
-            <ul> 
+            <ul>
                 <li><a href="Home.html">Home</a></li> 
                 <li> <a href="News.html ">Support</a></li> 
                 <div class="banner__navbar__search_box">
@@ -38,91 +39,154 @@
         </div>
         <div class="container__box game_1">
             <div class="container__box__content ">
-            <h2 class="container__box__title"> Something awesome</h2>
+            <h2 class="container__box__title"> Assassin's Creed valhalla</h2>
             <img src="" alt="">
             <div class="container__box__description">
                 <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
+                    The plot follows a modern-day man named Callum Lynch who, through a machine called the Animus, explores the memories of his 
+                    ancestor Aguilar de Nerha, 
+                </P>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
         <div class="container__box game_2">
             <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
+            <h2 class="container__box__title"> God of War Ragnarok </h2>
             <img src="" alt="">
             <div class="container__box__description">
                 <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
+                    The story follows the titular protagonist, Kratos, a Spartan warrior and later the God of War, who was tricked into killing his family by his former master                </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
         <div class="container__box game_3">
             <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
+            <h2 class="container__box__title"> Call of Duty - Modern Warfare</h2>
             <img src="" alt="">
             <div class="container__box__description">
                 <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
+                    They introduced an entirely new engine for the game, which allows for new performance enhancements such as more detailed environments and ray-tracing capabilities. </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
         <div class="container__box game_4">
             <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
+            <h2 class="container__box__title"> Star Wars - The fallen Jedi Order</h2>
             <img src="" alt="">
             <div class="container__box__description">
                 <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
+                    The story, set in the Star Wars universe five years after Star Wars: Episode III – Revenge of the Sith, follows Jedi Padawan Cal Kestis,</p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
         <div class="container__box game_5">
             <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
+            <h2 class="container__box__title"> Horizon Zero Dawn</h2>
             <img src="" alt="">
             <div class="container__box__description">
                 <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+                    The plot follows Aloy, a young hunter in a world overrun by machines, who sets out to uncover her past
+                    The player can explore the open world to discover locations and take on side quests.
                 </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
         <div class="container__box game_6">
             <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
+            <h2 class="container__box__title"> Gotham Knights</h2>
             <img src="" alt="">
             <div class="container__box__description">
                 <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
+                    Gotham Knights is an open-world, action RPG set in the most dynamic and interactive Gotham City yet. In either solo-play or with one other hero, patrol Gotham’s five distinct boroughs and drop in on criminal activity wherever you find it.                </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
         <div class="container__box game_7">
             <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
+            <h2 class="container__box__title"> Sekiro: Shadows Die Twice</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    Sekiro: Shadows Die Twice is a 2019 action-adventure game developed by FromSoftware and published by Activision. The game follows a shinobi known as Wolf as he attempts to take revenge.</p>
+            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+        <div class="container__box game_8">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> A way out</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    "A Way Out" is a two-player co-operative experience — it literally cannot be played without two people. It follows two men, Leo and Vincent, as they escape prison and embark on a quest for revenge.                </p>
+            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+    </div>
+    <!--Sport games-->
+    <div class="container sport">
+        <div class="container__box--header">
+            <div class="container__box--header__content">
+                <h4>Sport Games</h4>
+            <button class="container__box--header__content__btn btn1">Order Now <i class="fas fa-money-check-alt"></i></button>
+            <button class="container__box--header__content__btn btn2">Add to cart <i class="fas fa-shopping-cart"></i></button>
+            <button class="container__box--header__content__btn btn"> Sign-Up <i class="fas fa-gamepad"></i></button>
+            <button class="container__box--header__content__btn btn"> Login <i class="fas fa-sign-in-alt"></i></i></button>
+        </div>
+        </div>
+
+        <div class="container__box game_9">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> FIFA 22</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    FIFA 22 is Powered by Football, and features groundbreaking new HyperMotion gameplay technology on PlayStation 5, Xbox Series X|S, and Stadia                </p>
+            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+        <div class="container__box game_10">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> NBA 2K 2022</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    NBA 2K22 is a basketball simulation video game developed by Visual Concepts and published by 2K Sports, based on the National Basketball Association (NBA)                </p>
+            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+        <div class="container__box game_11">
+            <div class="container__box__content">
+            <h2 class="container__box__title">AHL 2K 2022</h2>
             <img src="" alt="">
             <div class="container__box__description">
                 <p>
@@ -130,11 +194,90 @@
                 </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
-        <div class="container__box game_8">
+        <div class="container__box game_12">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> Tennis 2022</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    Tennis is a racket sport that can be played individually against a single opponent (singles) or between two teams of two players each (doubles). </p>
+            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+        <div class="container__box game_13">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> Rory McIlroy PGA Tour</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    Rory McIlroy PGA Tour is a sports video game developed by EA Tiburon and published by Electronic Arts for PlayStation 4 and Xbox One. </p>
+            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+        <div class="container__box game_14">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> MLB The Show 20</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    MLB The Show 20 is a baseball video game by San Diego Studio and published by Sony Interactive Entertainment, based on Major League Baseball (MLB).                 </p>
+            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+        <div class="container__box game_15">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> Tony Hawk's Pro Skater 1 + 2</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    Tony Hawk's Pro Skater 1 + 2 is a skateboarding video game played in a third-person view with its gameplay oriented towards classic arcade games.                 </p>
+            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+        <div class="container__box game_16">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> Football Manager  2021</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    The manager's responsibilities in a professional football club usually include (but are not limited to) the following: Selecting the team of players for matches.                </p>
+            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+    </div>
+
+       <!--Online games-->
+       <div class="container online">
+        <div class="container__box--header">
+            <div class="container__box--header__content">
+                <h4>Online games</h4>
+            <button class="container__box--header__content__btn btn1">Order Now <i class="fas fa-money-check-alt"></i></button>
+            <button class="container__box--header__content__btn btn2">Add to cart <i class="fas fa-shopping-cart"></i></button>
+            <button class="container__box--header__content__btn btn"> Sign-Up <i class="fas fa-gamepad"></i></button>
+            <button class="container__box--header__content__btn btn"> Login <i class="fas fa-sign-in-alt"></i></i></button>
+        </div>
+        </div>
+
+        <div class="container__box game_9">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
             <img src="" alt="">
@@ -144,22 +287,10 @@
                 </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
-    </div>
-    <!--Sport games-->
-    <div class="container sport game_9">
-        <div class="container__box--header">
-            <div class="container__box--header__content">
-                <h4>Sport Games</h4>
-            <button class="container__box--header__content__btn btn1">Order Now <i class="fas fa-money-check-alt"></i></button>
-            <button class="container__box--header__content__btn btn2">Add to cart <i class="fas fa-shopping-cart"></i></button>
-            <button class="container__box--header__content__btn btn3">1 Month for free <i class="fas fa-gamepad"></i></button>
-        </div>
-        </div>
-
         <div class="container__box game_10">
             <div class="container__box__content">
             <h2 class="container__box__title"> Something awesome</h2>
@@ -170,7 +301,7 @@
                 </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
@@ -184,7 +315,7 @@
                 </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
@@ -198,7 +329,7 @@
                 </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
@@ -212,7 +343,7 @@
                 </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
@@ -226,7 +357,7 @@
                 </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
@@ -240,7 +371,7 @@
                 </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
@@ -254,24 +385,9 @@
                 </p>
             </div>
             <a href="#" class="container__box__button">
-                Learn More
+                Download Now
             </a>
         </div>
         </div>
-        <div class="container__box game_17">
-            <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
-            <img src="" alt="">
-            <div class="container__box__description">
-                <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
-            </div>
-            <a href="#" class="container__box__button">
-                Learn More
-            </a>
-        </div>
-        </div>
-    </div>
 </body>
 </html>
