--- a/01-HTML-CSS/07-SCSS/Shani/Game website/index.html
+++ b/01-HTML-CSS/07-SCSS/Shani/Game website/index.html
@@ -18,6 +18,8 @@
             <h1>I'M BORED.COM</h1>
             <input type="text" placeholder="Search.." name="search">
             <button type="submit">Submit</button>
+            <button type="register">REGISTER</button>
+            <button type="type"> LOGIN</button>
         </div>
 
 
@@ -43,9 +45,30 @@
 
 
 
-        <div class="games classic"></div>
+        <div class="games multiplayer one">
+            <h2>MULTIPLAYER GAMES</h2>
+            <div class="hover">
+                <img src="img/fireboy-and-watergirl1.jpg">
+                <p>FIREBOY &  WATERGIRL</p>
+               </div>
+            
+        </div>
+        <div class="games multiplayer two">
+            <div class="hover">
+                <img src="img/bombit1.jpg">
+                <p>BOMB IT</p>
+               </div>
+        </div>
+        <div class="games multiplayer three">
+            <div class="hover">
+                <img src="img/badicecream1.jpg">
+                <p>BAD ICE-CREAM</p>
+               </div>
+        </div>
+
+
         <div class="popular games "></div>
-        <div class="games multiplayer"></div>
+        <div class="games classic"></div>
 
 
 
