--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
@@ -277,13 +277,77 @@
         </div>
         </div>
 
-        <div class="container__box game_9">
+        <div class="container__box game_17">
             <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
+            <h2 class="container__box__title"> League Of Legends</h2>
             <img src="" alt="">
             <div class="container__box__description">
                 <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+                    League of Legends is one of the world's most popular video games, developed by Riot Games. It features a team-based competitive game mode based on strategy and outplaying opponents.                 </p>
+            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+        <div class="container__box game_18">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> Counter Strike: Global Offensive</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    Counter-Strike: Global Offensive (CS:GO) is a multiplayer first-person shooter developed by Valve and Hidden Path Entertainment. It is the fourth game in the Counter-Strike series </p>            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+        <div class="container__box game_19">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> Fortnite Battle Royale</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    Fortnite is a survival game where 100 players fight against each other in player versus player combat to be the last one standing. It is a fast-paced, action-packed game, not unlike The Hunger Games                </p>
+            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+        <div class="container__box game_20">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> Apex Legends</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    Apex Legends is an online multiplayer battle royale game featuring squads of three players using pre-made characters with distinctive abilities, called "Legends".                </p>
+            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+        <div class="container__box game_21">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> PUBG </h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    Battlegrounds is a player versus player shooter game in which up to one hundred players fight in a battle royale, a type of large-scale last man standing deathmatch where players fight to remain the last alive. 
+                </p>            </div>
+            <a href="#" class="container__box__button">
+                Download Now
+            </a>
+        </div>
+        </div>
+        <div class="container__box game_22">
+            <div class="container__box__content">
+            <h2 class="container__box__title"> Minecraft</h2>
+            <img src="" alt="">
+            <div class="container__box__description">
+                <p>
+                    Minecraft is often described as a 'sandbox game'. This means that it's a virtual land where users can create their own worlds and experiences, using building blocks, resources discovered on the site and their own creativity.   
                 </p>
             </div>
             <a href="#" class="container__box__button">
@@ -291,98 +355,26 @@
             </a>
         </div>
         </div>
-        <div class="container__box game_10">
+        <div class="container__box game_23">
             <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
+            <h2 class="container__box__title"> Hearthstone</h2>
             <img src="" alt="">
             <div class="container__box__description">
                 <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
+                    Hearthstone is a free-to-play online digital collectible card game developed and published by Blizzard Entertainment. The game is a turn-based card game between two opponents                </p>
             </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
         </div>
         </div>
-        <div class="container__box game_11">
+        <div class="container__box game_24">
             <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
+            <h2 class="container__box__title"> DOTA 2</h2>
             <img src="" alt="">
             <div class="container__box__description">
                 <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
-            </div>
-            <a href="#" class="container__box__button">
-                Download Now
-            </a>
-        </div>
-        </div>
-        <div class="container__box game_12">
-            <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
-            <img src="" alt="">
-            <div class="container__box__description">
-                <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
-            </div>
-            <a href="#" class="container__box__button">
-                Download Now
-            </a>
-        </div>
-        </div>
-        <div class="container__box game_13">
-            <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
-            <img src="" alt="">
-            <div class="container__box__description">
-                <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
-            </div>
-            <a href="#" class="container__box__button">
-                Download Now
-            </a>
-        </div>
-        </div>
-        <div class="container__box game_14">
-            <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
-            <img src="" alt="">
-            <div class="container__box__description">
-                <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
-            </div>
-            <a href="#" class="container__box__button">
-                Download Now
-            </a>
-        </div>
-        </div>
-        <div class="container__box game_15">
-            <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
-            <img src="" alt="">
-            <div class="container__box__description">
-                <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
-            </div>
-            <a href="#" class="container__box__button">
-                Download Now
-            </a>
-        </div>
-        </div>
-        <div class="container__box game_16">
-            <div class="container__box__content">
-            <h2 class="container__box__title"> Something awesome</h2>
-            <img src="" alt="">
-            <div class="container__box__description">
-                <p>
-                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
+                    Dota 2 is a multiplayer online battle arena (MOBA) video game in which two teams of five players compete to collectively destroy a large structure defended by the opposing team known as the "Ancient".                </p>
             </div>
             <a href="#" class="container__box__button">
                 Download Now
