--- a/01-HTML-CSS/07-SCSS/michaeldubovyk/index.html
+++ b/01-HTML-CSS/07-SCSS/michaeldubovyk/index.html
@@ -326,7 +326,7 @@
 
             <div class="gamebox gamebox--ac">
 
-                <img src="https://i.gifer.com/WQPj.gif" alt="">
+                <img src="https://media.giphy.com/media/MsXiYRKmJVwSA/giphy.gif" alt="">
                 <p>Assassin's Creed</p>
 
             </div>
