Add_links in nabar

--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
@@ -15,8 +15,10 @@
      <div class="banner">
         <div class="banner__navbar"> 
             <ul>
-                <li><a href="Home.html">Home</a></li> 
-                <li> <a href="News.html ">Support</a></li> 
+                <li><a href="">Home</a></li> 
+                <li> <a href=" ">About</a></li> 
+                <li> <a href="">Community</a></li> 
+                <li> <a href=" ">Support</a></li> 
                 <div class="banner__navbar__search_box">
                 <input class="banner__navbar__search_box__search_text" type="text" name="Full_Name" placeholder= "Type to search"> 
                 <a class="banner__navbar__search_box__Search-btn" href=""><i class="fas fa-search"></i></a>
