shani game website

--- a/01-HTML-CSS/07-SCSS/Shani/Game website/index.html
+++ b/01-HTML-CSS/07-SCSS/Shani/Game website/index.html
@@ -46,7 +46,8 @@
 
         <div class="games classic one">
             <h2>CLASSIC GAMES</h2>
-            <div class="hover"><img src="img/clubpenguin1.jpg">
+            <div class="hover">
+                <img src="img/clubpenguin1.jpg">
             <p>CLUB PENGUIN</p></div>
 
         </div>
@@ -76,6 +77,7 @@
             <div class="hover">
                 <img src="img/fireboy-and-watergirl1.jpg">
                 <p>FIREBOY & WATERGIRL</p>
+               
             </div>
 
         </div>
@@ -93,7 +95,6 @@
         </div>
 
 
-        <div class="popular games "></div>
 
 
 
