--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
@@ -46,7 +46,7 @@
             <div class="container__box__description">
                 <p>
                     The plot follows a modern-day man named Callum Lynch who, through a machine called the Animus, explores the memories of his 
-                    ancestor Aguilar de Nerha, 
+                    ancestor Aguilar de Nerha. This game is historical prospective.<br > <b class="container__box__description price">49.99$</b> 
                 </P>
             </div>
             <a href="#" class="container__box__button">
@@ -61,7 +61,7 @@
             <div class="container__box__description">
                 <p>
                     The story follows the titular protagonist, Kratos, a Spartan warrior and later the God of War, who was tricked into killing his family by his former master                </p>
-            </div>
+                    <br > <b class="container__box__description price">45.99$</b> </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -74,7 +74,7 @@
             <div class="container__box__description">
                 <p>
                     They introduced an entirely new engine for the game, which allows for new performance enhancements such as more detailed environments and ray-tracing capabilities. </p>
-            </div>
+                     this game shows another prosepctive of war zone <br><b class="container__box__description price">48.99$</b>  </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -87,7 +87,7 @@
             <div class="container__box__description">
                 <p>
                     The story, set in the Star Wars universe five years after Star Wars: Episode III – Revenge of the Sith, follows Jedi Padawan Cal Kestis,</p>
-            </div>
+                    <br > <b class="container__box__description price">51.99$</b> </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -101,7 +101,7 @@
                 <p>
                     The plot follows Aloy, a young hunter in a world overrun by machines, who sets out to uncover her past
                     The player can explore the open world to discover locations and take on side quests.
-                </p>
+                    <br > <b class="container__box__description price">44.99$</b> </p>
             </div>
             <a href="#" class="container__box__button">
                 Download Now
@@ -115,7 +115,7 @@
             <div class="container__box__description">
                 <p>
                     Gotham Knights is an open-world, action RPG set in the most dynamic and interactive Gotham City yet. In either solo-play or with one other hero, patrol Gotham’s five distinct boroughs and drop in on criminal activity wherever you find it.                </p>
-            </div>
+                    <br><b class="container__box__description price">48.99$</b> </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -128,7 +128,7 @@
             <div class="container__box__description">
                 <p>
                     Sekiro: Shadows Die Twice is a 2019 action-adventure game developed by FromSoftware and published by Activision. The game follows a shinobi known as Wolf as he attempts to take revenge.</p>
-            </div>
+                    <br><b class="container__box__description price">52.99$</b> </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -141,7 +141,7 @@
             <div class="container__box__description">
                 <p>
                     "A Way Out" is a two-player co-operative experience — it literally cannot be played without two people. It follows two men, Leo and Vincent, as they escape prison and embark on a quest for revenge.                </p>
-            </div>
+                    <br><b class="container__box__description price">42.99$</b>  </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -167,7 +167,7 @@
             <div class="container__box__description">
                 <p>
                     FIFA 22 is Powered by Football, and features groundbreaking new HyperMotion gameplay technology on PlayStation 5, Xbox Series X|S, and Stadia                </p>
-            </div>
+                    <br><b class="container__box__description price">53.99$</b> </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -180,7 +180,7 @@
             <div class="container__box__description">
                 <p>
                     NBA 2K22 is a basketball simulation video game developed by Visual Concepts and published by 2K Sports, based on the National Basketball Association (NBA)                </p>
-            </div>
+                    <br><b class="container__box__description price">58.99$</b> </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -193,7 +193,7 @@
             <div class="container__box__description">
                 <p>
                     Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
-                </p>
+                </p><br><b class="container__box__description price">48.99$</b> 
             </div>
             <a href="#" class="container__box__button">
                 Download Now
@@ -207,7 +207,7 @@
             <div class="container__box__description">
                 <p>
                     Tennis is a racket sport that can be played individually against a single opponent (singles) or between two teams of two players each (doubles). </p>
-            </div>
+                    <br><b class="container__box__description price">48.99$</b> </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -220,7 +220,7 @@
             <div class="container__box__description">
                 <p>
                     Rory McIlroy PGA Tour is a sports video game developed by EA Tiburon and published by Electronic Arts for PlayStation 4 and Xbox One. </p>
-            </div>
+                    <br><b class="container__box__description price">47.99$</b>  </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -233,7 +233,7 @@
             <div class="container__box__description">
                 <p>
                     MLB The Show 20 is a baseball video game by San Diego Studio and published by Sony Interactive Entertainment, based on Major League Baseball (MLB).                 </p>
-            </div>
+                    <br><b class="container__box__description price">46.99$</b> </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -246,7 +246,7 @@
             <div class="container__box__description">
                 <p>
                     Tony Hawk's Pro Skater 1 + 2 is a skateboarding video game played in a third-person view with its gameplay oriented towards classic arcade games.                 </p>
-            </div>
+                    <br><b class="container__box__description price">49.99$</b> </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -259,7 +259,7 @@
             <div class="container__box__description">
                 <p>
                     The manager's responsibilities in a professional football club usually include (but are not limited to) the following: Selecting the team of players for matches.                </p>
-            </div>
+                    <br><b class="container__box__description price">44.99$</b> </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -286,7 +286,7 @@
             <div class="container__box__description">
                 <p>
                     League of Legends is one of the world's most popular video games, developed by Riot Games. It features a team-based competitive game mode based on strategy and outplaying opponents.                 </p>
-            </div>
+                    <br><b class="container__box__description price">33.99$</b> </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -299,7 +299,8 @@
             <div class="container__box__description">
                 <p>
                     Counter-Strike: Global Offensive (CS:GO) is a multiplayer first-person shooter developed by Valve and Hidden Path Entertainment. It is the fourth game in the Counter-Strike series </p>            </div>
-            <a href="#" class="container__box__button">
+                    <br><b class="container__box__description price">33.99$</b>
+                    <br><a href="#" class="container__box__button">
                 Download Now
             </a>
         </div>
@@ -311,7 +312,7 @@
             <div class="container__box__description">
                 <p>
                     Fortnite is a survival game where 100 players fight against each other in player versus player combat to be the last one standing. It is a fast-paced, action-packed game, not unlike The Hunger Games                </p>
-            </div>
+                    <br><b class="container__box__description price">33.99$</b></div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -324,7 +325,7 @@
             <div class="container__box__description">
                 <p>
                     Apex Legends is an online multiplayer battle royale game featuring squads of three players using pre-made characters with distinctive abilities, called "Legends".                </p>
-            </div>
+                    <br><b class="container__box__description price">33.99$</b></div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -337,7 +338,7 @@
             <div class="container__box__description">
                 <p>
                     Battlegrounds is a player versus player shooter game in which up to one hundred players fight in a battle royale, a type of large-scale last man standing deathmatch where players fight to remain the last alive. 
-                </p>            </div>
+                </p>  <br><b class="container__box__description price">33.99$</b>           </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -351,7 +352,7 @@
                 <p>
                     Minecraft is often described as a 'sandbox game'. This means that it's a virtual land where users can create their own worlds and experiences, using building blocks, resources discovered on the site and their own creativity.   
                 </p>
-            </div>
+                <br><b class="container__box__description price">33.99$</b></div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -364,7 +365,7 @@
             <div class="container__box__description">
                 <p>
                     Hearthstone is a free-to-play online digital collectible card game developed and published by Blizzard Entertainment. The game is a turn-based card game between two opponents                </p>
-            </div>
+                    <br><b class="container__box__description price">33.99$</b></div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
@@ -377,7 +378,7 @@
             <div class="container__box__description">
                 <p>
                     Dota 2 is a multiplayer online battle arena (MOBA) video game in which two teams of five players compete to collectively destroy a large structure defended by the opposing team known as the "Ancient".                </p>
-            </div>
+                    <br><b class="container__box__description price">33.99$</b></div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
