--- a/01-HTML-CSS/07-SCSS/noa/hometask/game.html
+++ b/01-HTML-CSS/07-SCSS/noa/hometask/game.html
@@ -18,7 +18,7 @@
     </h2>
     <div class="classic-games">
         <div class="box">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/UzMfn2eR2NU?controls=0&mute=1"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/UzMfn2eR2NU?controls=0&mute=1&loop=1"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
