--- a/01-HTML-CSS/07-SCSS/tamir.work/index.html
+++ b/01-HTML-CSS/07-SCSS/tamir.work/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>-ALCOHOL ITS OT A GAME-</h1>
+    <h1>-ALCOHOL ITS NOT A GAME-</h1>
     <div class="wrapper wrapper1">
         <div class="box title">
             <p>old drinks</p>
