--- a/01-HTML-CSS/07-SCSS/yahya/index.html
+++ b/01-HTML-CSS/07-SCSS/yahya/index.html
@@ -14,16 +14,17 @@
 </head>
 
 <body>
-<img src="img/[removal.ai]_tmp-61a7a8bb8848e.png" alt="">
-
+<img  src="img/[removal.ai]_tmp-61a7a8bb8848e.png" alt="">
+<!--///////////////////////////-header/flex-///////////////////////////////////////-->
 <ul class="header">
     <il><a href "#">Home</a></a></il>
     <il><a href "#"> games</a></il>
     <il><a href "#">A-Z</a></il>
     <il><a href "#"> favorite</a> </il>
-    
+    <!--/>>>>>>>>>>>font awusome not work i don't know why<<<<<<<<<<<<<<-->
+    <a href=""><i class="fas fa-search " style="font-size: 46; color: white; border: solid red; width: 100px; justify-content: end; "></i><i class="fas fa-search"></i></a>
 </ul>
-
+<!--///////////////////////////-mainMmenu/grid-///////////////////////////////////////-->
 <div class="menu2">
 <div class="box m1"><a href="">acion</a> </div>
 <div class="box m2"><a href="">team</a> </div>
@@ -32,7 +33,7 @@
 </div>
 
 
-<!--///////////////////////////-main grid-///////////////////////////////////////-->
+<!--///////////////////////////-main game/ grid-///////////////////////////////////////-->
 <i class="fas fa-search" style="color: white;"></i>
 
 <h1>MOST ADDICTING GAMES</h1>
@@ -45,7 +46,7 @@
           
     </div>
 
-<!--////////////////////////-grid2-//////////////////////////////////////////-->
+<!--////////////////////////-Game/grid2/-//////////////////////////////////////////-->
     <h1>NEW GAMES </h1>
     <div class="num2">
         <div class="box"><img src="img/g2.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
@@ -58,7 +59,7 @@
         <div class="box"><img src="img/g8.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
      </div>
    
-<!--/////////////////////////-grid3-/////////////////////////////////////////-->
+<!--/////////////////////////-/gamegrid3-/////////////////////////////////////////-->
     <h1>TRENDING GAMES</h1>
     <div class="num3">
         <div class="box"><img src="img/g14.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
@@ -71,7 +72,7 @@
         <div class="box"><img src="img/g21.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
     </div>
  
-<!--///////////////////////////-grid4-///////////////////////////////////////-->   
+<!--///////////////////////////-game/grid4-///////////////////////////////////////-->   
     <h1>CLASSIC GAMES</h1>
     <div class="num4">
         <div class="box"><img src="img/g22.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
