--- a/01-HTML-CSS/07-SCSS/yahya/index.html
+++ b/01-HTML-CSS/07-SCSS/yahya/index.html
@@ -74,12 +74,12 @@
  
 <!--///////////////////////////-game/grid4-///////////////////////////////////////-->   
     <h1>CLASSIC GAMES</h1>
-    <div class="num4">
-        <div class="box"><img src="img/g22.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g23.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g24.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g25.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g26.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
+    <div class="main">
+        <div class="box gmain"><p>Lorem ipsum  </p></a></div>
+        <div class="box item1"><img src="img/g23.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
+        <div class="box item2"><img src="img/g24.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
+        <div class="box item3"><img src="img/g25.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
+        <div class="box item4"><img src="img/g26.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
         <div class="box"><img src="img/g27.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
         <div class="box"><img src="img/g29.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
         <div class="box"><img src="img/g28.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
