updated_call_of_duty

--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
@@ -74,7 +74,7 @@
             <div class="container__box__description">
                 <p>
                     They introduced an entirely new engine for the game, which allows for new performance enhancements such as more detailed environments and ray-tracing capabilities. </p>
-                     this game shows another prosepctive of war zone <br><b class="container__box__description price">48.99$</b>  </div>
+                     this game shows another prosepctive of war zone <br><b class="container__box__description price">48.99$<i class="fas fa-money-check-alt"></i></b>  </div>
             <a href="#" class="container__box__button">
                 Download Now
             </a>
