--- a/01-HTML-CSS/07-SCSS/chaim/index.html
+++ b/01-HTML-CSS/07-SCSS/chaim/index.html
@@ -34,9 +34,7 @@
    <div class="card">
    <img src="8.jpg" alt="">
    <p>dkfgnbklcckmz</p></div>
-   <div class="card">
-   <img src="9.jpg" alt="">
-    <p>dkfgnbklcckmz</p></div>
+   <div class="card"></div>
     <div class="card">
     <img src="10.jpg" alt="">
     <p>dkfgnbklcckmz</p></div>
@@ -82,9 +80,7 @@
     <div class="card">
       <img src="1.jpg" alt="">
      <p>jvnvjvnclzkm</p></div>
-      <div class="card">
-      <img src="2.jpg" alt="">
-      <p>lfvjkjnl</p></div>
+      <div class="card"></div>
        <div class="card">
        <img src="3.jpg" alt="">
        <p>kvcnklc</p></div>
