YOSSI_GRID_SCSS

--- a/01-HTML-CSS/07-SCSS/YOSSI_GRID_SCSS/index.html
+++ b/01-HTML-CSS/07-SCSS/YOSSI_GRID_SCSS/index.html
@@ -97,8 +97,8 @@
 
             <div class="cont2__box4">
                 <div class="game-pic"><img
-                        src="	https://i.pinimg.com/originals/56/65/71/566571ecb74391888c99adade814e6b0.gif"
-                        alt=""></div>
+                        src="	https://i.pinimg.com/originals/56/65/71/566571ecb74391888c99adade814e6b0.gif" alt="">
+                </div>
                 <div class="cont2__box4__text">Addicting Games</div>
             </div>
 
