--- a/01-HTML-CSS/07-SCSS/YOSSI_GRID_SCSS/index.html
+++ b/01-HTML-CSS/07-SCSS/YOSSI_GRID_SCSS/index.html
@@ -18,13 +18,13 @@
     <div class="cont1">
 
         <div class="cont1__box1">
-            <div class="cont1__box1__left"><img src="logo.png" class="logo"
+            <div class="cont1__box1__left"><img src="images/logo.png" class="logo"
                     style="height: 50%; width: 30%; padding: 10px; cursor: pointer;" alt=""></div>
             <div class="cont1__box1__middle">
                 <form action="/" method="GET" class="form">
                     <input type="search" placeholder="Search" class="search-field" />
                     <button type="submit" class="search-button">
-                        <img src="search.png">
+                        <img src="images/search.png">
                     </button>
                 </form>
             </div>
