--- a/01-HTML-CSS/08-Responsive/wil/index.html
+++ b/01-HTML-CSS/08-Responsive/wil/index.html
@@ -8,22 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-<div class="box">1</div>
-<div class="box">2</div>
-<div class="box">3</div>
-<div class="box">4</div>
-<div class="box">5</div>
-<div class="box">6</div>
-<div class="box">7</div>
-<div class="box">8</div>
-<div class="box">9</div>
-<div class="box">10</div>
-<div class="box">11</div>
-<div class="box">12</div>
-<div class="box">13</div>
-<div class="box">14</div>
-<div class="box">15</div>
-<div class="box">16</div>
+<div class="box"><img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048790001-11638253910.jpg" alt=""></div>
+<div class="box"><img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z033670001-11638284341.jpg" alt=""></div>
+<div class="box"><img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z033670005-11638284341.jpg" alt=""></div>
+<div class="box"><img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/1/z115230001-11638232387.jpg" alt=""></div>
+<div class="box"><img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/1/z104830004-11638254164.jpg" alt=""></div>
+<div class="box"><img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/1/z115230011-11638232387.jpg" alt=""></div>
+<div class="box"><img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z061656142-11637886921.jpg" alt=""></div>
+<div class="box"><img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/x/3/x377250001-11637682536.jpg" alt=""></div>
+
     
 </body>
 </html>
