--- a/01-HTML-CSS/07-SCSS/yahya/index.html
+++ b/01-HTML-CSS/07-SCSS/yahya/index.html
@@ -26,7 +26,7 @@
 </ul>
 <!--///////////////////////////-mainMmenu/grid-///////////////////////////////////////-->
 <div class="menu2">
-<div class="box m1"><a href="">acion</a> </div>
+<div class="box m1 "><a href="">acion</a> </div>
 <div class="box m2"><a href="">team</a> </div>
 <div class="box m3"><a href=""> solo</a></div>
 <div class="box m4"><a href=""> favorite</a></div>
@@ -38,51 +38,52 @@
 
 <h1>MOST ADDICTING GAMES</h1>
     <div class="main">
-        <div class="box gmain " ><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box item1"><img src="img/g10.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box item2"><img src="img/g11.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box item3"><img src="img/g12.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box item4"><img src="img/g13.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
+        <div class="box gmain " ><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box item1"><img src="img/g10.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box item2"><img src="img/g11.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box item3"><img src="img/g12.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box item4"><img src="img/g13.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
           
     </div>
 
 <!--////////////////////////-Game/grid2/-//////////////////////////////////////////-->
     <h1>NEW GAMES </h1>
     <div class="num2">
-        <div class="box"><img src="img/g2.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g3.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g4.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g5.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g6.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g7.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g9.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g8.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g2.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g3.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g4.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g5.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g6.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g7.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g9.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g8.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
      </div>
    
 <!--/////////////////////////-/gamegrid3-/////////////////////////////////////////-->
     <h1>TRENDING GAMES</h1>
     <div class="num3">
-        <div class="box"><img src="img/g14.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g15.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g16.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g17.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g18.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g19.png" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g20.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g21.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g14.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g15.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g16.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g17.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g18.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g19.png" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g20.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g21.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
     </div>
  
 <!--///////////////////////////-game/grid4-///////////////////////////////////////-->   
     <h1>CLASSIC GAMES</h1>
     <div class="main">
-        <div class="box gmain"><p>Lorem ipsum  </p></a></div>
-        <div class="box item1"><img src="img/g23.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box item2"><img src="img/g24.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box item3"><img src="img/g25.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box item4"><img src="img/g26.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g27.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g29.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
-        <div class="box"><img src="img/g28.jpg" alt=""><a href=""><p>Lorem ipsum  </p></a></div>
+        <div class="box gmain"><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box item1"><img src="img/g23.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box item2"><img src="img/g24.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box item3"><img src="img/g25.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box item4"><img src="img/g26.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g27.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g29.jpg" alt=""><a href=""><p class="text">Lorem ipsum  </p></a></div>
+        <div class="box"><img src="img/g28.jpg" alt=""><a href=""><p class="text">Lorem part1  </p></a></div>
+        <div class="box"><img src="img/g28.jpg" alt=""><a href=""><p class="text">Lorem part2🤣  </p></a></div>
     </div>
     
 <!--//////////////////////////////-<footer>-////////////////////////////////////-->
