--- a/01-HTML-CSS/07-SCSS/Etan/index.html
+++ b/01-HTML-CSS/07-SCSS/Etan/index.html
@@ -13,87 +13,118 @@
     <div class="wrapper">
         <h1>Nostalgic games</h1>
         <div class="wrapper__card">
-            <video loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
-                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
-            </source>
-            </video>
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
         </div>
         <div class="wrapper__card">
-            <video width="100vw" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
-                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
-            </source>
-            </video>
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
         </div>
         <div class="wrapper__card">
-            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
-                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
-            </source>
-            </video>
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
         </div>
         <div class="wrapper__card">
-            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
-                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
-            </source>
-            </video>
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
         </div>
         <div class="wrapper__card">
-            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
-                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
-            </source>
-            </video>
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
         </div>
         <div class="wrapper__card">
-            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
-                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
-            </source>
-            </video>
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
         </div>
         <div class="wrapper__card">
-            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
-                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
-            </source>
-            </video>
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
         </div>
         <div class="wrapper__card">
-            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
-                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
-            </source>
-            </video>
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
         </div>
         <div class="wrapper__card">
-            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
-                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
-            </source>
-            </video>
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
         </div>
         <div class="wrapper__card">
-            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
-                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
-            </source>
-            </video>
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
         </div>
         <div class="wrapper__card">
-            <video width="400" loop autoplay onmouseover="this.play()" onmouseout="this.pause()">
-                <source src="./videos/kuala_lumpur_timelapse.mp4" type="video/mp4">
-            </source>
-            </video>
-            <h1>Asorted drugs</h1>
-            <p>78.90</p>
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
         </div>
+        <div class="wrapper__card">
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
+        </div>
+        <div class="wrapper__card">
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
+        </div>
+        <div class="wrapper__card">
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
+        </div>
+        <div class="wrapper__card">
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
+        </div>
+        <div class="wrapper__card">
+            <img id="cover" src="./videos/bo2.png" alt="codbo2">
+            <img id="gif" src="https://media.giphy.com/media/3d63TFv0AtdrAebQJL/giphy.gif" type="gif">
+        </img>
+        <h1></h1>
+        <p></p>
+        </div>
+        
     </div>
     <footer>
         
