--- a/01-HTML-CSS/08-Responsive/marina/index.html
+++ b/01-HTML-CSS/08-Responsive/marina/index.html
@@ -12,23 +12,51 @@
 
 
 <div class="main">
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
-    <div class="main__box"></div>
+    <div class="box">
+        
+        <img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048792015-11638253910_1.jpg">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel voluptates, nemo dicta quibusdam itaque laboriosam eos saepe officia magnam excepturi rerum. Numquam aspernatur quia repudiandae minus aliquam cumque quos facilis.</p>
+    </div>
+    <div class="box">
+        <img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048792015-11638253910_1.jpg">
+    </div>
+    <div class="box">
+        <img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048792015-11638253910_1.jpg">
+    </div>
+    <div class="box">
+        <img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048792015-11638253910_1.jpg">
+    </div>
+    <div class="box">
+        <img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048792015-11638253910_1.jpg">
+    </div>
+    <div class="box">
+        <img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048792015-11638253910_1.jpg">
+    </div>
+    <div class="box">
+        <img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048792015-11638253910_1.jpg">
+    </div>
+    <div class="box">
+        <img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048792015-11638253910_1.jpg">
+    </div>
+    <div class="box">
+        <img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048792015-11638253910_1.jpg">
+    </div>
+    <div class="box">
+        <img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048792015-11638253910_1.jpg">
+    </div>
+    <div class="box">
+        <img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048792015-11638253910_1.jpg">
+    </div>
+    <div class="box">
+        <img src="https://media.terminalx.com/pub/media/catalog/product/cache/92af6b9c945798a7e3b64d91033084b3/z/0/z048792015-11638253910_1.jpg">
+    </div>
+ 
 </div>
+
+
+
+
+
 
 
 </body>
