--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
@@ -36,24 +36,22 @@
         <!-- top container -->
 
         <section class="top-container" id="top-container">
-            <header class="header">
-                <h1 class="header__h1">Republic of Games</h1>
-                <p class="header__p">Check Out The Warld of Gaming With THE Best Games COllection OF All Time .
+            <header class="top-container__header">
+                <h1>Republic of Games</h1>
+                <p>Check Out The Warld of Gaming With THE Best Games COllection OF All Time .
                 </p>
                 <a href="#related-games" class="btn">Read more</a>
             </header>
 
-            <div class="top-box"
-                style="background-image: url(https://media2.giphy.com/media/JIraK0THaC0ymqkS7W/giphy.gif?cid=ecf05e47lwzo7orjw6rqjj4lnfxejps39vohpeocr0vvdvk1&rid=giphy.gif&ct=g); background-repeat: no-repeat; background-size: 469px 450px;">
-                <h4 class="top-box__h4">Halo </h4>
-                <p class="top-box__price">$99</p>
+            <div class="top-container__top-box top-box-a">
+                <h4>Halo </h4>
+                <p class="price">$99</p>
                 <a href="#" class="btn">Buy Now</a>
             </div>
 
-            <div class="top-box"
-                style="background-image: url(https://media3.giphy.com/media/fxfmMuGbh5aPtZ9T6j/giphy.gif?cid=ecf05e47x6a2cal7gv5st93hecwdmvy67cxift012yf12lrh&rid=giphy.gif&ct=g); background-repeat: no-repeat; background-size: 469px 450px;">
-                <h4 class="top-box__h4">Counter-Strike </h4>
-                <p class="top-box__price">$149</p>
+            <div class="top-container__top-box top-box-b">
+                <h4>Counter-Strike </h4>
+                <p class="price">$149</p>
                 <a href="#" class="btn">Buy Now</a>
             </div>
         </section>
@@ -100,8 +98,8 @@
         <section class="cs-go" id="cs-go">
             <img class="cs-go__img" src="IMG/CS-GO.jpg" alt="cs">
             <div>
-                <h2 class="cs-go__h2">Counter Strike Global Offensive</h2>
-                <p class="cs-go__p">Counter-Strike: Global Offensive is a multiplayer first-person shooter developed by
+                <h2>Counter Strike Global Offensive</h2>
+                <p>Counter-Strike: Global Offensive is a multiplayer first-person shooter developed by
                     Valve and Hidden Path Entertainment. It is the fourth game in the
                     Counter-Strike series. Developed for over two years, Global Offensive was released for Windows,
                     macOS, Xbox 360, and PlayStation 3 in August 2012, and for Linux in 2014.</p>
