--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/Gaming.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="devices__box"
-                style="background-image: url(https://www.colourbox.com/preview/8885137-dark-green-hexagon-steel-texture-background.jpg);">
+                style="background-image: url(https://www.colourbox.com/preview/8885137-dark-green-hexagon-steel-texture-background.jpg); background-size: cover;">
                 <i class="fab fa-xbox fa-4x"></i>
                 <h3>XboX</h3>
                 <p>Xbox is a video gaming brand created and owned by Microsoft. The brand consists of five
@@ -77,7 +77,7 @@
             </div>
 
             <div class="devices__box"
-                style="background-image: url(https://cdn.statically.io/img/i.pinimg.com/originals/aa/8b/f0/aa8bf05a42cd4ca84bd1e2855be41ddf.jpg);">
+                style="background-image: url(https://cdn.statically.io/img/i.pinimg.com/originals/aa/8b/f0/aa8bf05a42cd4ca84bd1e2855be41ddf.jpg); background-size: cover;">
                 <i class="fab fa-windows fa-4x"></i>
                 <h3>PC Gaming</h3>
                 <p>There are two main editions of PC Gamer, a British version and an American version,
@@ -86,7 +86,7 @@
             </div>
 
             <div class="devices__box"
-                style="background-image: url(https://i.pinimg.com/originals/25/7c/14/257c140b0522932d0abc53896c3bcbf3.png);">
+                style="background-image: url(https://i.pinimg.com/originals/25/7c/14/257c140b0522932d0abc53896c3bcbf3.png); background-size: cover;">
                 <i class="fas fa-mobile-alt fa-4x"></i>
                 <h3>Mobile Gaming</h3>
                 <p>Mobile platform is simply the software platform on top of the programs which can run an application
@@ -122,7 +122,7 @@
 
         <!-- FOOTER -->
         <footer>
-            <P>Video Gaming &copy; 2010-2021</P>
+            <P>Republic of Games &copy; 2021</P>
         </footer>
     </div>
 
