--- a/01-HTML-CSS/07-SCSS/marina/marina-GameSite/GameSite.html
+++ b/01-HTML-CSS/07-SCSS/marina/marina-GameSite/GameSite.html
@@ -65,6 +65,7 @@
 
             <div class="content1__game1 img">
                 <img class="img" src="https://static-cdn.jtvnw.net/ttv-boxart/505568_IGDB-272x380.jpg">
+                <!-- <img class="img" src="img\littlebigsnake.gif"> -->
                 <p> Little Big Snake</p>
             </div>
 
@@ -74,7 +75,7 @@
             </div>
 
             <div class="content1__game3 img">
-                <img class="img" src="img\dragon-awaken.jpeg">
+                <img class="img" src="img/dragon-awaken.jpeg">
                 <p>Dragon Awaken</p>
             </div>
 
@@ -156,8 +157,8 @@
 
             <div class="content2__game1">
                 <img class="content2__game1 img1"
-                    src="https://images.crazygames.com/games/motocross-hero/cover-1625473970532.jpeg?auto=format,compress&q=75&cs=strip&ch=DPR&w=1200&h=630&fit=crop">
-                <p class="img1__p1">Motocross Hero</p>
+                    src="img/1.gif">
+                <p class="img1__p1">New Releases</p>
             </div>
 
 
