--- a/01-HTML-CSS/07-SCSS/Andrew/homework/index.html
+++ b/01-HTML-CSS/07-SCSS/Andrew/homework/index.html
@@ -68,14 +68,9 @@
                 </p>
             </div>
 
-            <div class="mainGrid_largeImg">
-            </div>
+            <div class="mainGrid_largeImg"></div>
 
-            <div class="mainGrid_longImg">
-                <div class="mainGrid_item-img_text">
-
-                </div>
-            </div>
+            <div class="mainGrid_longImg"></div>
 
             <div class="mainGrid_shortText">
                 <p class="mainGrid_shortText_title">
@@ -92,11 +87,7 @@
                 </p>
             </div>
 
-            <div class="mainGrid_mediumText">
-                <div class="mainGrid_item-img_text">
-
-                </div>
-            </div>
+            <div class="mainGrid_mediumImg"></div>
 
         </div>
     </div>
