--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist\Gaming_Lior.css">
+    <link rel="stylesheet" href="dist\test.css">
     <script src="https://kit.fontawesome.com/38117c55e6.js" crossorigin="anonymous"></script>
     <title>Gaming store</title>
 </head>
